--- a/Identify_Customer_Segments.html
+++ b/Identify_Customer_Segments.html
@@ -11950,10 +11950,49 @@ Name: feature_values, dtype: float64
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>we can see from the graph above that the top 3 features of the overrepresented cluster in the customer data are different from the top 3 features of the overrepresented cluster in the demographics data
-and in the same time the top 3 features of the underrepresented cluster in the customer data are different from the top 3 features of the underrepresented cluster in the demographics data
-this means that the customer data is different from the demographics data
-and this is an indication that the company is targeting a specific group of people that are different from the general population</p>
+<p>We can see from the graph above that the top 3 features of the overrepresented cluster in the customer data are different from the top 3 features of the overrepresented cluster in the demographics data. At the same time, the top 3 features of the underrepresented cluster in the customer data are different from the top 3 features of the underrepresented cluster in the demographics data. This means that the customer data is different from the demographics data, indicating that the company is targeting a specific group of people that are different from the general population.</p>
+<h3 id="Characteristics-of-the-Overrepresented-Cluster-in-the-Customer-Data-Compared-to-the-General-Population:">Characteristics of the Overrepresented Cluster in the Customer Data Compared to the General Population:<a class="anchor-link" href="#Characteristics-of-the-Overrepresented-Cluster-in-the-Customer-Data-Compared-to-the-General-Population:">¶</a></h3><ul>
+<li>They are more likely to be in the age of 60-70.</li>
+<li>They are more likely to be in the financial typology of 40-50.</li>
+<li>They are more likely to be in the personality typology of 40-50.</li>
+</ul>
+<h3 id="Characteristics-of-the-Underrepresented-Cluster-in-the-Customer-Data-Compared-to-the-General-Population:">Characteristics of the Underrepresented Cluster in the Customer Data Compared to the General Population:<a class="anchor-link" href="#Characteristics-of-the-Underrepresented-Cluster-in-the-Customer-Data-Compared-to-the-General-Population:">¶</a></h3><ul>
+<li>They are more likely to be in the age of 40-50.</li>
+<li>They are more likely to be in the financial typology of 50-60.</li>
+<li>They are more likely to be in the personality typology of 50-60.</li>
+</ul>
+<h3 id="Recommendations:">Recommendations:<a class="anchor-link" href="#Recommendations:">¶</a></h3><ul>
+<li>The company should target the people in the underrepresented cluster in the customer data compared to the general population, as they are more likely to be in the age of 40-50, in the financial typology of 50-60, and in the personality typology of 50-60.</li>
+<li>The company should avoid targeting the people in the overrepresented cluster in the customer data compared to the general population, as they are more likely to be in the age of 60-70, in the financial typology of 40-50, and in the personality typology of 40-50.</li>
+</ul>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+</div>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+</div>
 </div>
 </div>
 </div>
